--- a/archive/estilo.css
+++ b/archive/estilo.css
@@ -65,6 +65,23 @@
   background:#045a01;
 }
 
+#btnCrud{
+  margin-top: 1%;
+  border:none;
+  float:right;
+  height:100%;
+  border-radius:7px 7px 7px 7px;
+  width:20%;
+  font-weight:bold;
+  color: white;
+  background: black;
+}
+
+#btnCrud:hover
+{
+  background:#045a01;
+}
+
 #divBusca img{
   float:left;
 }
@@ -103,4 +120,4 @@
     height:2%;    
     background:black;
     clear: both;
-} 
+}
